@@ -67,6 +67,17 @@ this repository contains the full copyright notices and license terms. -->
             <field name="inherit" ref="commission.plan_view_list"/>
             <field name="name">plan_list</field>
         </record>
+        <record model="ir.action.act_window" id="act_agent_relate_form">
+            <field name="name">Agents</field>
+            <field name="res_model">commission.agent</field>
+            <field name="domain" eval="[('plan', '=', Eval('active_id'))]" pyson="1"></field>
+        </record>
+        <record model="ir.action.keyword" id="act_agent_relate_keyword">
+            <field name="keyword">form_relate</field>
+            <field name="model">commission.plan,-1</field>
+            <field name="action" ref="act_agent_relate_form"/>
+        </record>
+
         <!-- ######################### -->
         <!-- # Plan Calculation Date # -->
         <!-- ######################### -->
