@@ -26,3 +26,4 @@ xml:
     event_type.xml
     general_configuration.xml
     authorizations.xml
+    offered.xml
