@@ -5,10 +5,16 @@ this repository contains the full copyright notices and license terms. -->
     <xpath expr="/form" position="inside">
         <newline/>
         <label name="agent_payment_term"/>
-        <field name="agent_payment_term" colspan="3"/>
+        <field name="agent_payment_term"/>
+        <newline/>
         <label name="start_date"/>
         <field name="start_date"/>
         <label name="end_date"/>
         <field name="end_date"/>
+        <notebook>
+            <page name="commissioned_products">
+                <field name="commissioned_products" colspan="4"/>
+            </page>
+        </notebook>
     </xpath>
 </data>
