@@ -3,6 +3,7 @@
 this repository contains the full copyright notices and license terms. -->
 <data>
     <xpath expr="/tree" position="inside">
+        <field name="commissioned_products_name"/>
         <field name="start_date"/>
         <field name="end_date"/>
     </xpath>
