@@ -2,7 +2,8 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/field[@name='end_date']" position="after">
+    <xpath expr="/form/notebook" position="before">
         <field name="extra_data" colspan="2" no_command="1"/>
+        <newline/>
     </xpath>
 </data>
