@@ -8,6 +8,8 @@ depends:
     company
     ir
     party
+extras_depend:
+    commission_multi_agents
 xml:
     commission.xml
     party.xml
