@@ -2,10 +2,14 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/form" position="inside">
-        <newline/>
+    <xpath expr="/form/notebook" position="before">
         <label name="second_level_commission"/>
         <field name="second_level_commission"/>
-        <field name="commissioned_agents" colspan="4"/>
+    </xpath>
+    <xpath expr="/form/notebook/page[@name='commissioned_products']" position="before">
+        <page id="hierarchy" string="Hierarchy">
+            <field name="commissioned_agents" colspan="4"/>
+            <field name="parents" colspan="4"/>
+        </page>
     </xpath>
 </data>
