@@ -2,7 +2,7 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/notebook/page[@id='admin']/field[@name='tags']" position="before">
+    <xpath expr="/form/notebook/page[@name='lines']" position="inside">
         <field name="commissioned_agents" colspan="2"/>
     </xpath>
     <xpath expr="/form/field[@name='type_']" position="after">
