@@ -2,7 +2,9 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/form" position="inside">
-        <field name="fees" colspan="4"/>
+    <xpath expr="/form/notebook" position="inside">
+        <page name="fees">
+            <field name="fees" colspan="4"/>
+        </page>
     </xpath>
 </data>
